--- a/projekat/src/main/resources/application.properties
+++ b/projekat/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8088
 #MySQL db
 spring.datasource.url = jdbc:mysql://localhost:3306/xmlwebDB?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username =root
-spring.datasource.password =root
+spring.datasource.password =prozone
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #ovo koristis ako hoces da ti nacrta veze u workbenchu u suprotnom da bi brze radilo koristis gornju
