Urađeni repozitorijumi. Započeti servisi i kontroleri.

--- a/projekat/src/main/resources/application.properties
+++ b/projekat/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8089
 
 #MySQL db
-spring.datasource.url = jdbc:mysql://localhost:3306/xmlwebDB?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/xmlwebDB?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username =root
-spring.datasource.password =prozone
+spring.datasource.password =root
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #ovo koristis ako hoces da ti nacrta veze u workbenchu u suprotnom da bi brze radilo koristis gornju
@@ -20,3 +20,6 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.jpa.hibernate.naming-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategy
+
+# Setting context path (URL)
+server.contextPath = /booking
