Rad na servisima.

--- a/projekat/src/main/resources/application.properties
+++ b/projekat/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategy
 
 # Setting context path (URL)
-server.contextPath = /booking
+server.servlet.contextPath = /booking
