--- a/admin/admin-front/package.json
+++ b/admin/admin-front/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^6.0.4",
     "@angular/router": "^6.0.4",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@stanvanheumen/ngx-storage": "^1.0.5",
+    "angular-sessionstorage": "^1.1.5",
     "core-js": "^2.5.4",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
